# Hudl-Performance-Insights-2026

./: .gitignore  CLEANUP_PLAN.md  README.md  research-findings-24jun.md  task-plan.md  workflow.md
focus-fatigue/: .coding-agent.md  .gitignore  .task_blueprint.md  README.md  debug_validate.py  pyproject.toml  requirements.txt
focus-fatigue/analysis/: clean_percentile_fatigue.py  cog_load_analysis.py  cog_load_viz.py  defensive_group_fatigue.py  demand_adjusted_model.py  demand_adjusted_reviewer.py  demand_adjusted_v2.py  demand_adjustment_methodology.md  dissociation_analysis.py  dissociation_figure.py  opponent_quality_covariate.py  rolling_window_analysis.py  scoreline_state_plan.md
focus-fatigue/data/: ligue1_2021_22_complete_fixtures.csv
focus-fatigue/figures/: dissociation_README.md
focus-fatigue/fixtures/: test_new_signals.py
focus-fatigue/notebooks/: analysis.ipynb  analysis_executed.ipynb  cognitive_vs_physical_analysis.py  fatigue_load_analysis.ipynb  high_load_dissociation.py  pipeline.ipynb  run_merge.ipynb  run_new_signals.ipynb
focus-fatigue/outputs/: scoreline_summary.csv  unified_fatigue_dataset.parquet
focus-fatigue/review/: clean_percentile_reviewer.py  defensive-group-review.md  demand-adjusted-review-v2.md  demand-adjusted-review.md  new-signals-review.md  new-signals-validation.md  percentile-model-review.md  review_v2_runner.py  reviewer_task.md
focus-fatigue/scripts/: capture_baseline.py  compute_performance_cis.py  conor_spec_analysis.py  continuous_cog_model.py  dissociation_figure_corrected.py  generate_synthetic.py  (+6 more)
(+431 files in other folders)
