[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-fatigue"
version = "0.1.0"
description = "Cognitive Fatigue Detection in Football Defence"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyarrow>=10.0",
    "kloppy>=3.0",
    "mplsoccer>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
